--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ title: zeroq的Blog
 <p>最新文章</p>
 <ul>
 {% for post in site.posts %}
-	<li>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
+	<li>{{ post.date | date: "%Y-%m-%d" }} <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul>
