--- a/_posts/2013-04-01-first.html
+++ b/_posts/2013-04-01-first.html
@@ -6,7 +6,9 @@ category: life
 <h2>{{ page.title }}</h2>
 <p>我的第一篇文章</p>
 <p>{{ page.date | date_to_string }}</p>
-<div id="disqus_thread"></div>
+<div class="span12">
+	<div id="disqus_thread"></div>
+</div>
 <script type="text/javascript">
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 	var disqus_shortname = 'zeroq'; // required: replace example with your forum shortname
